Most of the basic api works with dummy backend. No error handling though.
